# reconcile-web

./: 2026-07-18-index-table-kata-commonmark.md  2026-07-18-index-table-kata.html  2026-07-19-month-expand-kata-commonmark.md  2026-07-19-month-expand-kata.html  README.md  app.html  app.html.md  archive.html  archive.html.md  deploy.html  deploy.html.md  index.html  index.html.md  llms.txt  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  sync.html  sync.html.md
docs/superpowers/plans/: 2026-07-02-reconcile-web-v1.md
docs/superpowers/specs/: 2026-07-02-reconcile-web-design.md
nbs/: 00_archive.ipynb  00_core.ipynb  01_app.ipynb  02_sync.ipynb  03_deploy.ipynb  2026-07-18-index-table-kata.md  2026-07-19-month-expand-kata.md  index.ipynb  nbdev.yml
reconcile_web/: _modidx.py  app.py  archive.py  core.py  deploy.py  sync.py
