[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "reconcile-web"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Hiroshi Doyu", email = "hiroshi.doyu@ninjalabo.ai"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["python-fasthtml==0.14.4", "markdown==3.10.2"]

[project.scripts]
reconcile-push = "reconcile_web.sync:reconcile_push"
reconcile-deploy = "reconcile_web.deploy:reconcile_deploy"

[project.urls]
Repository = "https://github.com/doyu/reconcile-web"
Documentation = "https://doyu.github.io/reconcile-web/"

[project.entry-points.nbdev]
reconcile_web = "reconcile_web._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "reconcile_web.__version__"}

[tool.setuptools.packages.find]
include = ["reconcile_web"]

[tool.nbdev]
